# progen

./: .env  .gitignore  README.md  gen_train_data.py  generate_data.py  preprocess.py  pyproject.toml  sample.py  setup.py  train.py
configs/: default.yml
configs/data/: default.toml  default.yml
configs/model/: default.toml  default.yml
progen/: __init__.py  progen.py  utils.py
progen_transformer/: __init__.py  checkpoint.py  data.py  progen.py  utils.py
